# write

./: Cargo.toml  README.md  default.nix  package-lock.json  package.json
dna/coordinator_zomes/pad/: Cargo.toml
dna/coordinator_zomes/pad/src/: lib.rs  pad.rs
dna/integrity_zomes/pad_integrity/: Cargo.toml
dna/integrity_zomes/pad_integrity/src/: lib.rs
dna/integrity_zomes/pad_integrity/src/pad/: definition.rs
dna/workdir/: dna.yaml
dnas/meta-pad/zomes/coordinator/pads/: Cargo.toml
dnas/meta_pad/workdir/: dna.yaml
dnas/meta_pad/zomes/coordinator/pads/src/: lib.rs  pad.rs
dnas/meta_pad/zomes/integrity/pads/: Cargo.toml
nix/: sources.json
tests/: package.json
tests/src/: index.ts  utils.ts
tests/src/meta_pad/pad/: pad.ts
ui/: index.html  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.vue  main.ts  router.ts
ui/src/components/meta_pad/pad/: CreatePad.vue  PadListItem.vue  PadsList.vue
ui/src/lib/: image-url-block.ts  paragraph-block.js
ui/src/pages/: Dashboard.vue  PadDetail.vue
ui/src/types/: block.ts
ui/src/types/meta_pad/: pad.ts
workdir/: happ.yaml  web-happ.yaml
